--- a/src/app/component/members/members.component.html
+++ b/src/app/component/members/members.component.html
@@ -7,7 +7,7 @@
       <mat-card-title>{{member.Name}} {{member.Surname}}</mat-card-title>
     </mat-card-header>
     <img mat-card-image src={{member.PhotoURL}} alt="Photo of {{member.Name}} {{member.Surname}}" class="w3-round w3-margin"
-    onerror="this.onerror=null; this.src='/assets/img/default-avatar-profile.png'">
+    onerror="this.onerror=null; this.src='assets/img/default-avatar-profile.png'" width="336" height="224">
     <mat-card-content>
     </mat-card-content>
 </mat-card>
